--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/Avatar.png"
+          src="./assets/avaatar.png"
           alt="alessandro de lado , usando oculos , de barba , camisa branca."
         />
         <p>@alves2ale</p>
